--- a/.github/workflows/dendron.yml
+++ b/.github/workflows/dendron.yml
@@ -16,7 +16,7 @@ jobs:
       run: npm install
 
     - name: Build pod
-      run: npm run dendron-cli -- buildSite --wsRoot .
+      run: npm run dendron-cli -- buildSite --wsRoot . --stage prod
 
     - name: Deploy site
       uses: peaceiris/actions-gh-pages@v3
